<resources>
    <string name="app_name">社群联盟</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_passwork">忘记密码</string>
    <string name="prompt_user">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="login_tv">LOGIN</string>
    <string name="phone">手机号码</string>
    <string name="InviteCode">邀请码</string>
    <string name="renchouzonge">认筹总额：¥</string>
    <string name="mubiaozonge">目标总额：¥</string>
    <string name="lijiduobao">立即夺宝</string>
    <string name="qiandao">签到</string>
    <string name="mine">我的</string>
    <string name="edit">编辑</string>
    <string name="mingpian">名片</string>
    <string name="woyaotuijian">我要推荐</string>
    <string name="renlingzhoingxin">认领中心</string>
    <string name="woderenmai">我的人脉</string>
    <string name="sanfenzhong">三分钟教学</string>
    <string name="wodeganhuo">我的干货</string>
    <string name="wodeqiuzu">我的求助</string>
    <string name="wodezhongchou">我的众筹</string>
    <string name="wodeduobao">我的夺宝</string>
    <string name="wodelinghun">我的灵魂贩卖</string>
    <string name="canyudehuodong">参与的活动</string>
    <string name="setting">设置</string>
    <string name="fankui">反馈</string>
    <string name="application_center">应用中心</string>
    <string name="woyaorenling">我要认领</string>
    <string name="searchSomething">请输入要搜索的关键字</string>
    <string name="quxiao">取消</string>
    <string name="renlingxinxi">认领信息</string>


    <string name="str_relation_colleague">同事</string>
    <string name="str_relation_schoolfellow">校友</string>
    <string name="str_relation_countrymen">同乡</string>
    <string name="str_relation_relative">亲人</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_claim_activiy">ClaimActiviy</string>
</resources>
