<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qiandao"
                android:textColor="@color/col_999999"
                android:textSize="@dimen/font_12" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/mine"
                android:textColor="@color/black"
                android:textSize="@dimen/font_24" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mingpian"
                android:textColor="@color/col_999999"
                android:textSize="@dimen/font_12" />
            />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:background="@color/col_999999"
            android:layout_height="8dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="5dp">

            <com.example.just.shequnlianmeng.views.CircleImageView
                android:id="@+id/iv_mine_userIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/default_portrait" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/iv_mine_userIcon"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_mine_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="王博文"
                    android:textSize="@dimen/font_24" />

                <TextView
                    android:id="@+id/tv_mine_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="北京艾佳天诚信息有限公司"
                    android:textSize="@dimen/font_18" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="编号:"
                        android:textSize="@dimen/font_12" />

                    <TextView
                        android:id="@+id/tv_mine_userNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ike002578"
                        android:textSize="@dimen/font_12" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="推荐人:"
                        android:textSize="@dimen/font_12" />

                    <TextView
                        android:id="@+id/tv_mine_recommender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ike0024877李太白"
                        android:textSize="@dimen/font_12" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="贡献值:"
                        android:textSize="@dimen/font_12" />

                    <TextView
                        android:id="@+id/tv_mine_contributionNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="500"
                        android:textSize="@dimen/font_12" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_mine_reputationNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="信誉值:"
                        android:textSize="@dimen/font_12" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"
                        android:textSize="@dimen/font_12" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/edit"
                android:textColor="@color/col_999999"
                android:textSize="@dimen/font_12" />
            />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:background="@color/col_999999"
            android:layout_height="8dp"/>
        <RelativeLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_20"
                android:text="@string/woyaotuijian"/>
            <ImageView
                android:id="@+id/iv_mine_recommend"
                android:layout_alignParentRight="true"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/rp_arrow"/>
        </RelativeLayout>
        <RelativeLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="40dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_20"
                android:text="@string/renlingzhoingxin"/>
            <ImageView
                android:id="@+id/iv_mine_renling"
                android:layout_alignParentRight="true"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/rp_arrow"/>
        </RelativeLayout>
        <RelativeLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_20"
                android:text="@string/woderenmai"/>
            <ImageView
                android:id="@+id/iv_mine_renmai"
                android:layout_alignParentRight="true"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/rp_arrow"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:background="@color/col_999999"
            android:layout_height="8dp"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="@dimen/font_20"
            android:text="@string/sanfenzhong"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="@dimen/font_20"
            android:text="@string/wodeganhuo"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="@dimen/font_20"
            android:text="@string/wodeqiuzu"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="@dimen/font_20"
            android:text="@string/wodezhongchou"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="@dimen/font_20"
            android:text="@string/wodeduobao"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="@dimen/font_20"
            android:text="@string/wodelinghun"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="@dimen/font_20"
            android:text="@string/canyudehuodong"/>
        <View
            android:layout_width="match_parent"
            android:background="@color/col_999999"
            android:layout_height="8dp"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="@dimen/font_20"
            android:text="@string/setting"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="@dimen/font_20"
            android:text="@string/fankui"/>
    </LinearLayout>
</ScrollView>

</LinearLayout>