<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="@dimen/lv_foot_ml_10"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_relation_colleague"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/str_relation_colleague"
            android:textColor="@color/black"
            android:textSize="@dimen/font_20" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:srcCompat="@mipmap/more" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/aam_item_border" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="@dimen/lv_foot_ml_10"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_relation_schoolfellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/str_relation_schoolfellow"
            android:textColor="@color/black"
            android:textSize="@dimen/font_20" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:srcCompat="@mipmap/more" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/aam_item_border" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="@dimen/lv_foot_ml_10"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_relation_countrymen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/str_relation_countrymen"
            android:textColor="@color/black"
            android:textSize="@dimen/font_20" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:srcCompat="@mipmap/more" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/aam_item_border" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="@dimen/lv_foot_ml_10"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_relation_relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/str_relation_relative"
            android:textColor="@color/black"
            android:textSize="@dimen/font_20" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:srcCompat="@mipmap/more" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/aam_item_border" />

</LinearLayout>